--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,13 @@ body {
         font-family: 'Georgia', serif
     }
 
-    p{
+    .h3{
         text-align: center;
+        font-size: 36px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        text-decoration: underline;
+        font-variant: small-caps;
+
     }
 
 
