--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
 /* Body Styling */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f2f2f2;
-    color: #333;
+    background-color: #003153;
+    background-image: repeating-linear-gradient(25deg, #003153 10%, #1B1B1B 10%,#000000 15%, #003153 15%, #1B1B1B 10%,#000000 30%);
+    
+    color: #000000;
     text-align: center;
     padding: 50px;
   }
     h2{
         font-size: 72px;
         font-variant: small-caps;
-        font-family: 'Georgia', serif
+        font-family: 'Georgia', serif;
+        color: #6d5b5b;
     }
 
     .h3{
@@ -18,9 +21,18 @@ body {
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-decoration: underline;
         font-variant: small-caps;
+        
 
     }
-
+    /* .generation-traits li {
+      padding: 5px 0;
+      font-size: 16px;
+      color: #333;
+    }
+    
+    .generation-traits li:hover {
+      background-color: #e0e0e0;
+    } */
 
   /* Input Box Styling */
   input[type="date"] {
@@ -95,9 +107,17 @@ body {
 
   @media (max-width: 1150px){
     h2{
-        font-size: 42px;
-        font-variant: small-caps;
-        font-family: 'Georgia', serif
+      font-size: 42px;
+      font-variant: small-caps;
+      font-family: 'Georgia', serif
+    }
+    .h3{
+      font-size: 30px;
+    }
+  }
+  @media (max-width: 992px){
+    ul .generation-traits li{
+      font-size: 14px;
     }
   }
   @media (max-width: 600px) {
@@ -109,6 +129,9 @@ body {
         font-variant: small-caps;
         font-family: 'Georgia', serif
     }
+    .h3{
+      font-size: 18px;
+    }
   
     #result {
       width: 90%;
@@ -119,3 +142,4 @@ body {
     }
   }
   
+
