--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
   input[type="date"] {
     padding: 10px;
     font-size: 18px;
-    width: 250px;
+    min-width: 250px;
     border-radius: 10px;
     border: 2px solid #4CAF50;
     margin-top: 10px;
